updated for rebase

--- a/src/test/resources/prop/application.properties
+++ b/src/test/resources/prop/application.properties
@@ -1,2 +1,4 @@
 baseURL=http://www.wsj.com/india
-baseURL.us=http://www.wsj.com/us
+baseURL.us=http://www.wsj.com/usa
+baseURL.canada=http://www.wsj.com/canada
+
